force-app/main/default/objects/Paradigm_Endpoint__mdt/Paradigm_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Paradigm Endpoint</label>
    <pluralLabel>Paradigm Endpoints</pluralLabel>
</CustomObject>