force-app/main/default/objects/Paradigm_Endpoint__mdt/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <label>Auth Endpoint</label>
    <length>250</length>
    <type>Text</type>
</CustomField>