force-app/main/default/objects/Paradigm_Endpoint__mdt/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Will be used to identify which credentials to use to get Auth Token</description>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MML</fullName>
                <default>true</default>
                <label>MML</label>
            </value>
            <value>
                <fullName>Internal - Ubiquity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>