force-app/main/default/objects/Paradigm_Endpoint__mdt/fields/Purchase_URL__c.field-meta.xml
<CustomField>
    <fullName>Purchase_URL__c</fullName>
    <label>Purchase URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>